<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/img_banner_profile"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:src="@drawable/ic_verified_account"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/ic_ProfileUser_profile"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="15dp"
                android:src="@drawable/ic_profile_default"
                app:civ_border_color="@color/white"
                app:civ_border_width="3dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_user_name"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="17sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"/>


                <TextView
                    android:id="@+id/txt_username_name"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"/>

            </LinearLayout>

            <Button
                android:id="@+id/btn_follow_following_profile"
                android:layout_width="wrap_content"
                android:minWidth="120dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:layout_marginStart="15dp"
                android:text="@string/follow"
                android:textColor="@color/black"
                android:background="@drawable/background_button_follow"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/following"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:layout_gravity="center"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/txt_amount_following_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/following"
                    android:textColor="@color/black"
                    android:layout_gravity="center"
                    android:textSize="18sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/followers"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:layout_gravity="center"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/txt_amount_followers_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/following"
                    android:textColor="@color/black"
                    android:layout_gravity="center"
                    android:textSize="18sp"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txt_user_bio_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account_will_not_be_validated_leave"
                android:textSize="17sp"
                android:textColor="@color/black"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>