<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="25dp"
    android:scrollbarSize="1dp"
    android:fillViewport="true"
    android:scrollbarThumbVertical="@drawable/custom_scroll_style_vertical"
    tools:context=".Activitys.IntroActivity">

    <!-- Container -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Text Intro Description -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/intro_description"
            android:textColor="@color/black"
            android:textSize="28sp"
            android:textStyle="bold"
            android:layout_marginStart="5dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline_intro_app"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <!-- Guide Line Center Screen -->
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_intro_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />

        <!-- CardView btn Sign Up -->
        <androidx.cardview.widget.CardView
            android:id="@+id/btn_create_account_into"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="30dp"
            app:cardBackgroundColor="@color/base_color"
            app:cardCornerRadius="22dp"
            android:layout_marginTop="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline_intro_app">

            <!-- Container -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:padding="4dp">

                <!-- Text Create Account -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:text="@string/create_account"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <!-- Text Login  -->
        <TextView
            android:id="@+id/txt_login_intro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="30dp"
            android:textSize="17sp"
            android:text="@string/have_an_account_already"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>