<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activitys.SignInActivity">

    <!-- Header -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="30dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Img Arrow -->
        <ImageView
            android:id="@+id/btn_back_signIn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_arrow_back"
            android:layout_marginStart="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Container Body -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="15dp"
        app:layout_constraintBottom_toTopOf="@+id/container_bottom_validate_email"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Container Main -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!-- Container Info -->
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="5dp"
                android:fillViewport="true"
                android:scrollbarSize="1dp"
                app:layout_constraintBottom_toTopOf="@+id/container_bottom_signIn"
                app:layout_constraintTop_toTopOf="parent">

                <!-- Container To Scroll -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <!-- Text Tittle -->
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/login_to_river"
                        android:textColor="@color/black"
                        android:textSize="22sp"
                        android:textStyle="bold" />

                    <!-- Edit Text Login Method -->
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/edit_ls_login_method_signIn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:maxWidth="320dp"
                        android:minWidth="320dp"
                        app:hintEnabled="true"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/name_tl_signUp">

                        <!-- Edit Text -->
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edit_login_method_signIn"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/base_color"
                            android:hint="@string/phone_email_or_username"
                            android:inputType="text"
                            android:minHeight="50dp"
                            android:textSize="18sp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <!-- Edit Text Password -->
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/edit_ls_password_signIn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="13dp"
                        android:maxWidth="320dp"
                        android:minWidth="320dp"
                        app:hintEnabled="true"
                        app:passwordToggleEnabled="true"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/name_tl_signUp">

                        <!-- Edit Text -->
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edit_password_signIn"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/base_color"
                            android:hint="@string/password"
                            android:inputType="textPassword"
                            android:minHeight="50dp"
                            android:textSize="18sp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <!-- Text Didn't receive email? -->
                    <TextView
                        android:id="@+id/txt_didNot_receive_email_validate_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:minHeight="50dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/forgot_your_password"
                        android:textColor="@color/base_color_click"
                        android:textSize="18sp" />

                </LinearLayout>

            </ScrollView>

            <!-- Container Bottom -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/container_bottom_signIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="@color/transparent"
                app:layout_constraintBottom_toBottomOf="parent">

                <!-- Button Next -->
                <Button
                    android:id="@+id/btn_next_signIn"
                    android:layout_width="100dp"
                    android:layout_height="35dp"
                    android:text="@string/next"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:enabled="false"
                    android:layout_marginTop="1dp"
                    android:layout_marginBottom="1dp"
                    android:background="@drawable/custom_button_disable_next"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</LinearLayout>